Alan: Fix aaeon-imx-setup-release.sh

--- a/conf/machine/ucom-imx93.conf
+++ b/conf/machine/ucom-imx93.conf
@@ -28,53 +28,53 @@ EXTRA_KERNEL_PATCHES = " \
 # EXTRA_UBOOT_BOOTLOADER = "imx-boot-ucom-imx93-sd.bin-flash_evk"
 
 # Include device trees for other boards for internal test
-KERNEL_DEVICETREE += " \
-    freescale/imx93-11x11-evk-pmic-pf0900.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-aud-hat.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-boe-wxga-lvds-panel.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-flexio-i2c.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-flexspi-m2.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-i2c-spi-slave.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-i3c.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-ld.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-lpuart.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-mqs.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-mt9m114.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-rm67199.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-root.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-rpmsg.dtb \
-    freescale/imx93-11x11-evk-pmic-pf0900-rpmsg-lpv.dtb \
-    freescale/imx93-14x14-evk.dtb \
-    freescale/imx93-14x14-evk-aud-hat.dtb \
-    freescale/imx93-14x14-evk-dsi-serdes.dtb \
-    freescale/imx93-14x14-evk-flexspi-m2.dtb \
-    freescale/imx93-14x14-evk-i3c.dtb \
-    freescale/imx93-14x14-evk-lvds-it6263.dtb \
-    freescale/imx93-14x14-evk-mqs.dtb \
-    freescale/imx93-14x14-evk-rm67199.dtb \
-    freescale/imx93-14x14-evk-sja1105.dtb \
-    freescale/imx93-14x14-evk-tja1103.dtb \
-    freescale/imx93-9x9-qsb.dtb \
-    freescale/imx93-9x9-qsb-aud-hat.dtb \
-    freescale/imx93-9x9-qsb-can1.dtb \
-    freescale/imx93-9x9-qsb-flexspi-m2.dtb \
-    freescale/imx93-9x9-qsb-i3c.dtb \
-    freescale/imx93-9x9-qsb-ld.dtb \
-    freescale/imx93-9x9-qsb-lpspi.dtb \
-    freescale/imx93-9x9-qsb-lpspi-slave.dtb \
-    freescale/imx93-9x9-qsb-mt9m114.dtb \
-    freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
-    freescale/imx93-9x9-qsb-rpmsg.dtb \
-    freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
-"
+# KERNEL_DEVICETREE += " \
+#     freescale/imx93-11x11-evk-pmic-pf0900.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-aud-hat.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-boe-wxga-lvds-panel.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-flexio-i2c.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-flexspi-m2.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-i2c-spi-slave.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-i3c.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-ld.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-lpuart.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-mqs.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-mt9m114.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-rm67199.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-root.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-rpmsg.dtb \
+#     freescale/imx93-11x11-evk-pmic-pf0900-rpmsg-lpv.dtb \
+#     freescale/imx93-14x14-evk.dtb \
+#     freescale/imx93-14x14-evk-aud-hat.dtb \
+#     freescale/imx93-14x14-evk-dsi-serdes.dtb \
+#     freescale/imx93-14x14-evk-flexspi-m2.dtb \
+#     freescale/imx93-14x14-evk-i3c.dtb \
+#     freescale/imx93-14x14-evk-lvds-it6263.dtb \
+#     freescale/imx93-14x14-evk-mqs.dtb \
+#     freescale/imx93-14x14-evk-rm67199.dtb \
+#     freescale/imx93-14x14-evk-sja1105.dtb \
+#     freescale/imx93-14x14-evk-tja1103.dtb \
+#     freescale/imx93-9x9-qsb.dtb \
+#     freescale/imx93-9x9-qsb-aud-hat.dtb \
+#     freescale/imx93-9x9-qsb-can1.dtb \
+#     freescale/imx93-9x9-qsb-flexspi-m2.dtb \
+#     freescale/imx93-9x9-qsb-i3c.dtb \
+#     freescale/imx93-9x9-qsb-ld.dtb \
+#     freescale/imx93-9x9-qsb-lpspi.dtb \
+#     freescale/imx93-9x9-qsb-lpspi-slave.dtb \
+#     freescale/imx93-9x9-qsb-mt9m114.dtb \
+#     freescale/imx93-9x9-qsb-ontat-wvga-panel.dtb \
+#     freescale/imx93-9x9-qsb-rpmsg.dtb \
+#     freescale/imx93-9x9-qsb-rpmsg-lpv.dtb \
+# "
 # Include M33 demo apps of other boards
-IMAGE_BOOT_FILES:append = " \
-    imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
-    imx93-14x14-evk_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
-    imx93-14x14-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
-    imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
-    imx93-9x9-qsb_m33_TCM_low_power_wakeword.bin \
-    imx93-9x9-qsb_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
-    imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
-    imx93-9x9-qsb_m33_TCM_sai_low_power_audio.bin \
-"
+# IMAGE_BOOT_FILES:append = " \
+#     imx93-14x14-evk_m33_TCM_power_mode_switch.bin \
+#     imx93-14x14-evk_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+#     imx93-14x14-evk_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+#     imx93-9x9-qsb_m33_TCM_power_mode_switch.bin \
+#     imx93-9x9-qsb_m33_TCM_low_power_wakeword.bin \
+#     imx93-9x9-qsb_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
+#     imx93-9x9-qsb_m33_TCM_rpmsg_lite_str_echo_rtos.bin \
+#     imx93-9x9-qsb_m33_TCM_sai_low_power_audio.bin \
+# "
